Fix bug where download bttn is hidden by cv after 1050px

--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -78,7 +78,7 @@ $focus-color: rgb(40, 215, 159);
       margin-left: 0.5em;
       margin-right: 0.5em;
       margin-top: 12em;
-      margin-bottom: 10vw;
+      margin-bottom: 40vw;
   
       &:hover {
         height: 85vh;
